--- a/mkturk.html
+++ b/mkturk.html
@@ -1,7 +1,9 @@
 <!doctype html>
 
-
 <head>
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+<meta http-equiv="Pragma" content="no-cache"/>
+<meta http-equiv="Expires" content="0"/>
 <link rel="stylesheet" type="text/css" href="mkturk_style.css">
 
 <form style="display: none;" id="MechanicalTurk_SubmissionForm" action="https://www.mturk.com/mturk/externalSubmit" method="post">
@@ -17,14 +19,9 @@
 
 <link rel="manifest" href="mkturkmanifest.json">
 <link rel="icon" href="mkturklogo48.png">
-
-<script src="mkturk_installsettings.js"></script>
-<script src="https://unpkg.com/dropbox/dist/Dropbox-sdk.min.js"></script>
-
 </head>
 
-<!-- ************* BODY *************** -->
-<body style="overflow-y: hidden; overflow-x:hidden; background-color:#7F7F7F">
+<body style="overflow-y: hidden; overflow-x:hidden; background-color:#494c51">
 
 <div id="myProgress", style="overflow:hidden">
 		<div id="AutomatorLoadBar"></div>
@@ -39,12 +36,11 @@
 <button id="noble" name="noble">No Bluetooth juicer</button>
 <button id="drive_juice_button" onclick="writepumpdurationtoBLE(500)">Send juice signal</button>
 
-
-<div id="TrialCounter">0</div>
-<div id="DebugMessageTextBox">0</div>
+<div id="TrialCounter">-</div>
+<div id="DebugMessageTextBox">Welcome...</div>
 <div id="SessionTextBox"><b>Subject:</b> <br><b>Experiment:</b></div>
 <div id="PreviewModeSplash">
-  <span id='PreviewSplashText'><p style="color:red; font-size:large; font-weight:bold; text-align:center">PREVIEW MODE</p>Please use <b>Google Chrome</b> and turn your <b>sound on</b>. Test your computer is compatible by playing with the <text style="font-weight:bold">demo below</text>. The HIT will take around 15 minutes to complete. 
+  <span id='PreviewSplashText'><p style="color:red; font-size:large; font-weight:bold; text-align:center">PREVIEW MODE</p>Please use <b>Google Chrome</b> and turn your <b>sound on</b>. For the HIT to load properly, <b>cookies</b> must be enabled. Test your computer is compatible by playing with the <text style="font-weight:bold">demo below</text>.  
   </span>
 </div>
 
@@ -62,7 +58,7 @@
   <input type="image"  class='DeviceButton' id = 'TabletImage' src="tutorial_images/tablet.png " alt="Tablet" onclick="setDeviceSelection(this, 'touchscreen')" />
 
   <span>
-  <button style="text-align:center; width:30%; height:10%; position:absolute; margin-top:5%; top: 80%; left:35%;"  onclick="toggleElement(0, 'MechanicalTurkCursorDeviceSelectionScreen'); FLAGS.clicked_device_selection(SESSION.MechanicalTurk_DeviceSelected)" id='CloseDeviceSelectionButton' disabled> <i>Make selection...</i> </button>
+  <button style="text-align:center; width:30%; height:10%; position:absolute; margin-top:5%; top: 80%; left:35%;"  onclick="toggleElement(0, 'MechanicalTurkCursorDeviceSelectionScreen'); FLAGS.clicked_device_selection(UX.MechanicalTurk_DeviceSelected)" id='CloseDeviceSelectionButton' disabled> <i>Make selection...</i> </button>
   </span>
 </div>
 
@@ -73,75 +69,178 @@
   <input type="image"  class='HandButton' id = 'RightHandImage' src="tutorial_images/right_hand.png " alt="Righthanded" onclick="setHandSelection(this, 'right')" />
 
   <span>
-  <button style="text-align:center; width:30%; height:10%; position:absolute; margin-top:5%; top: 80%; left:35%;"  onclick="toggleElement(0, 'MechanicalTurkHandSelectionScreen'); FLAGS.clicked_hand_selection(SESSION.MechanicalTurk_Handedness)" id='CloseHandSelectionButton' disabled> <i>Make selection...</i> </button>
+  <button style="text-align:center; width:30%; height:10%; position:absolute; margin-top:5%; top: 80%; left:35%;"  onclick="toggleElement(0, 'MechanicalTurkHandSelectionScreen'); FLAGS.clicked_hand_selection(UX.MechanicalTurk_Handedness)" id='CloseHandSelectionButton' disabled> <i>Make selection...</i> </button>
   </span>
 </div>
 
 <button id="doneTestingTask" name="doneTestingTask">Done with testing trials</button>
 
-<button id = 'SyncButton', name="SyncButton">Save</button>
-
 <button id = 'WorkerCashInButton' name="WorkerCashInButton">Turn in</button>
 
-<button onclick="reloadPage()" id = "ReloadButton" name="ReloadButton">Reload</button>
 
+<script src="https://unpkg.com/dropbox/dist/Dropbox-sdk.min.js"></script>
+<script src="setup_upstairs_session.js" type="text/javascript"></script>
+<script src="setup_MechanicalTurk_session.js" type="text/javascript"></script>
 
-
-<dialog id="subjectID_dialog">
-  <p>Select subject: </p>
-   <!--Pull down menu that will hold file list-->
-  <select id="subjectID_list">
-  	<option value="-1">--</option>
-  </select>
-</dialog>
-
-<dialog id="ExperimentFile_dialog">
-  <p>Select experiment: </p>
-   <!--Pull down menu that will hold file list-->
-  <select id="ExperimentFile_list">
-  	<option value="-1">--</option>
-  </select>
-</dialog>
-
+<script src="mkturk_installsettings.js"></script>
 <script src="javascript_utils/seedrandom.js" type="text/javascript"></script>
-<script src="mkturk_globalvariables.js"></script>
-<script src="mkturk_rewardmap.js" type="text/javascript"></script>
-<script src="mkturk_eventlisteners.js" type="text/javascript"></script>
 <script src="mkturk_ImageBuffer.js" type="text/javascript"></script>
-<script src="mkturk_screenfunctions.js"></script>
-<script src="mkturk_canvas_business.js" type="text/javascript"></script>
 <script src="mkturk_bluetooth.js" type="text/javascript"></script>
 <script src="mkturk_utils.js" type="text/javascript"></script>
-<script src="mkturk_runtrial.js" type="text/javascript"></script>
 <script src="mkturk_SoundPlayer.js" type="text/javascript"></script>
 <script src="mkturk_DiskIO.js" type="text/javascript"></script>
-<script src="mkturk_data_writer.js" type="text/javascript"></script>
+<script src="mkturk_DataWriter.js" type="text/javascript"></script>
 <script src="mkturk_TaskStreamer.js" type="text/javascript"></script>
 <script src="mkturk_UX.js" type="text/javascript"></script>
-<script src="mkturk_reinforcement.js" type="text/javascript"></script>
-<script src="mkturk_tutorial.js" type="text/javascript"></script>
+<script src="mkturk_CheckPointer.js" type="text/javascript"></script>
+<script src="mkturk_Playspace.js" type="text/javascript"></script>
+<script src="mkturk_ActionPoller.js" type="text/javascript"></script>
+<script src="mkturk_Reinforcer.js" type="text/javascript"></script>
 <script src="mkturk_ScreenDisplayer.js" type="text/javascript"></script>
-<script src="mkturk_setup.js" type="text/javascript"></script>
+<script src="mkturk_amazon_utils.js" type="text/javascript"></script>
+<script src="mkturk_Verifier.js"></script>
 
-<script src="setup_upstairs_task.js" type="text/javascript"></script>
-<script src="setup_MechanicalTurk_task.js" type="text/javascript"></script>
+<script src="mkturk_SessionBootStrapper.js" type="text/javascript"></script>
+<script src="mkturk_defaultHIT_failsafe.js" type="text/javascript"></script>
+
+<script src="mkturk_screenfunctions.js"></script>
+<script src="unit_tests.js"></script>
+
 
 <script>
 
+
+var FLAGS = {}; // todo: get rid of
+
+
 (async function(){
+try{
 
-await setupTask()
+console.time('Done setting up')
 
+// Load inputs from local storage, web, or Dropbox.
+wdm('Running bootstrapper...')
+var SBS = new SessionBootStrapper()
+var sessionPackage = await SBS.build()
+
+// Verify inputs
+wdm('Verifying inputs...')
+
+VF = new Verifier()
+sessionPackage = VF.verify_session_package(sessionPackage)
+console.log('sessionPackage', sessionPackage)
+// Construct session
+wdm('Setting up session...')
+
+if (sessionPackage['ENVIRONMENT']['rigEnvironment'] == 'mechanicalturk'){
+  var freturn = await setup_mechanicalturk_session(sessionPackage)
+}
+else if (sessionPackage['ENVIRONMENT']['rigEnvironment'] == 'monkeybox'){
+  var freturn = await setup_upstairs_session(sessionPackage)
+}
+// Unpack objects
+var TaskStreamer = freturn['TaskStreamer']
+var DataWriter = freturn['DataWriter']
+var Playspace = freturn['Playspace']
+var UX = freturn['UX']
+var SESSION = freturn['SESSION']
+
+
+// Attach static data objects 
+wdm('Attaching static data probes...')
+DataWriter.deposit_key_data('ENVIRONMENT', sessionPackage['ENVIRONMENT'])
+DataWriter.deposit_key_data('TASK_SEQUENCE', sessionPackage['GAME_PACKAGE']['TASK_SEQUENCE'])
+DataWriter.deposit_key_data('GAME', sessionPackage['GAME_PACKAGE']['GAME'])
+DataWriter.deposit_key_data('SESSION', SESSION)
+DataWriter.deposit_key_data('IMAGEBAGS_MAPPING', TaskStreamer.idx2bag)
+//DataWriter.deposit_key_data('IMAGEBAGS_PATH', SBS.get_imagebags_path()) // a compressed representation of imagebags
+DataWriter.deposit_key_data('BOOTSTRAP_LOG', SBS.get_bootstrap_log())
+DataWriter.deposit_key_data('VERIFICATION_LOG', VF.get_verification_log())
+
+// Attach async data probes 
+wdm('Attaching async data probes...')
+
+DataWriter.attach_probe(Playspace, 'deviceLog', 'DEVICE_LOG')
+DataWriter.attach_probe(Playspace.ActionPoller, 'actionLog', 'ACTION_LOG')
+DataWriter.attach_probe(Playspace, 'rewardLog', 'REWARD_LOG')
+DataWriter.attach_probe(Playspace, 'playspaceLog', 'PLAYSPACE_LOG')
+
+// Kick off async threads 
+wdm('Kicking off async threads...')
+Playspace.start_periodic_rewards()
+Playspace.start_action_tracking()
+Playspace.start_device_tracking()
+DataWriter.start_polling()
+TaskStreamer.start_buffering_continuous()
+
+
+// Main trial loop
 console.log('ENTERING MAIN TRIAL STATE MACHINE')
-TERMINAL_STATE = false 
-while(TERMINAL_STATE == false){
-	await runtrial()
-  UX.poll()
+console.timeEnd('Done setting up')
+wdm('Entering main trial loop...')
 
+while(TaskStreamer.TERMINAL_STATE == false){
+  var trialPackage = await TaskStreamer.get_trial()
+	var trialOutcome = await Playspace.run_trial(trialPackage) 
+  TaskStreamer.update_state(trialOutcome)
+  UX.poll(trialOutcome)
+  DataWriter.deposit_trial_outcome(trialOutcome) // checkpoints; saves to disk
+  DataWriter.write_out()
+  wdm('Starting next trial...')
 }
 
-await DWr.concludeSession()
-} ())
+await DataWriter.conclude_session()
+}// End try
+
+
+//******* FAILSAFE HANDLING FOR MECHANICAL TURK *******
+catch(error){
+  console.log('ptap failed with the following error:')
+  console.error(error)
+  errorMessage = String(error)
+}
+finally{
+  // Should not get here unless an error took place
+  // Assume failure took place in mechanical turk session (this code is irrelevant for inlab)
+  // Submit the error message
+  await sleep(1500)
+
+  try{
+    var dataobj = DataWriter.package_data()
+  }
+  catch(error){
+    var dataobj = {'ERROR_DataWriter.package_data()':String(error)}
+  }
+  try{
+    var s = JSON.stringify(errorMessage)
+    dataobj['ERROR_main_loop'] = s
+  }
+  catch(error){
+    dataobj['ERROR_main_loop_not_found'] = JSON.stringify(String(error))
+  }
+  dataobj = {'SESSION_DATA':dataobj}
+  document.getElementById("submission_data").value = JSON.stringify(dataobj);
+  
+  // Extract assignmentId from localstorage 
+  var landingPageURL = await localStorage.getItem('LANDING_PAGE_URL')
+  landingPageURL = atob(landingPageURL)
+  var assignmentId = az.get_assignmentId_from_url(landingPageURL)
+  document.getElementById("assignmentId").value = assignmentId; 
+    
+  var submit_url = "https://www.mturk.com/mturk/externalSubmit"
+  //var submit_url = "https://workersandbox.mturk.com/mturk/externalSubmit"
+
+  document.getElementById("MechanicalTurk_SubmissionForm").action = submit_url
+  console.log('Submitting failed session to mechanical turk')
+  
+  //document.getElementById("MechanicalTurk_SubmissionForm").submit();
+  
+  
+}
+
+}())
+
+
 
 </script>
 </body>
